Wed Mar 19 20:15:20 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: Don't assume the server will answer immediately,
   but instead use select() to see if data is available. This should fix
   the problem that 'upsmon' loses connections on highly loaded servers.
   Likewise, also check if the server is ready to receive data before
   trying to send it.

Tue Mar 18 19:51:53 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - server/upsd: use poll() instead of select() to allow larger numbers
   of clients to connect to the server than FD_SETSIZE allows (maximum
   number can be specified with MAXCONN in upsd.conf, defaults to
   FD_SETSIZE)

Mon Mar 17 13:43:21 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - data/cmdvartab: add obsolete 'beeper.on' and 'beeper.off' commands
   with an informative message to use the new replacements

Thu Mar 13 15:25:32 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - clients/upsstats.c, conf/upsstats.html.sample: fixed the Internet
   Explorer compatibility. It doesn't like HTML attribute values on a
   separate line (as for STATUSCOLOR), though it is HTML 4.0 compliant.

Mon Mar 10 10:02:36 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 * drivers/usbhid-ups:
   - allow subdrivers to override the 'shutdown.(return|stayoff)'
     commands that are 'composed' in the driver
   - add new 'load.(on|off).delay' commands to allow the above (will
     implicitly define 'load.(on|off)' command with a delay value of
     '0')
   - add description of how the driver will deal with these commands
     in the documentation for the HID subdrivers

Sun Mar  9 02:45:35 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - Patches from George Ross to support ups.temperature in upsstats.cgi
 - update config.guess, config.sub and install.sh

Sun Mar  9 02:31:15 UTC 2008 / Charles Lepple <clepple@gmail.com>

 - drivers/bestups.[ch]: Don't show ups.temperature if it starts with an 'X'.
   (Updated driver version to 1.04)
